Adds strucure and implementation for delete service
This patch
   - Defines the structure for the delete service as
     `/book/{id}`
   - Adds implentation for the delete service where
     a record of books is deleted from book store
