# gen/http/book/server/server.go
@@ -22,6 +22,7 @@ type Server struct {
 	Create http.Handler
 	List   http.Handler
 	Update http.Handler
+	Remove http.Handler
 }
 
 // ErrorNamer is an interface implemented by generated error structs that
@@ -60,10 +61,12 @@ func New(
 			{"Create", "POST", "/"},
 			{"List", "GET", "/books"},
 			{"Update", "PATCH", "/book/{id}"},
+			{"Remove", "DELETE", "/book/{id}"},
 		},
 		Create: NewCreateHandler(e.Create, mux, decoder, encoder, errhandler, formatter),
 		List:   NewListHandler(e.List, mux, decoder, encoder, errhandler, formatter),
 		Update: NewUpdateHandler(e.Update, mux, decoder, encoder, errhandler, formatter),
+		Remove: NewRemoveHandler(e.Remove, mux, decoder, encoder, errhandler, formatter),
 	}
 }
 
@@ -75,6 +78,7 @@ func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.Create = m(s.Create)
 	s.List = m(s.List)
 	s.Update = m(s.Update)
+	s.Remove = m(s.Remove)
 }
 
 // Mount configures the mux to serve the book endpoints.
@@ -82,6 +86,7 @@ func Mount(mux goahttp.Muxer, h *Server) {
 	MountCreateHandler(mux, h.Create)
 	MountListHandler(mux, h.List)
 	MountUpdateHandler(mux, h.Update)
+	MountRemoveHandler(mux, h.Remove)
 }
 
 // MountCreateHandler configures the mux to serve the "book" service "create"
@@ -209,6 +214,57 @@ func NewUpdateHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "update")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "book")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			errhandler(ctx, w, err)
+		}
+	})
+}
+
+// MountRemoveHandler configures the mux to serve the "book" service "remove"
+// endpoint.
+func MountRemoveHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("DELETE", "/book/{id}", f)
+}
+
+// NewRemoveHandler creates a HTTP handler which loads the HTTP request and
+// calls the "book" service "remove" endpoint.
+func NewRemoveHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeRemoveRequest(mux, decoder)
+		encodeResponse = EncodeRemoveResponse(encoder)
+		encodeError    = EncodeRemoveError(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "remove")
 		ctx = context.WithValue(ctx, goa.ServiceKey, "book")
 		payload, err := decodeRequest(r)
 		if err != nil {
