# gen/http/openapi3.yaml
@@ -37,6 +37,41 @@ paths:
                 name: book1
                 price: 100
   /book/{id}:
+    delete:
+      tags:
+      - book
+      summary: remove book
+      description: Remove book from storage
+      operationId: book#remove
+      parameters:
+      - name: id
+        in: path
+        description: ID of book to remove
+        required: true
+        schema:
+          type: integer
+          description: ID of book to remove
+          example: 18292458
+        example: 1479393518
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              example: {}
+        "404":
+          description: ""
+          content:
+            application/vnd.goa.error:
+              schema:
+                $ref: '#/components/schemas/Error'
+              example:
+                fault: true
+                id: 123abc
+                message: parameter 'p' must be an integer
+                name: bad_request
+                temporary: true
+                timeout: true
     patch:
       tags:
       - book
@@ -94,23 +129,7 @@ paths:
                   id: 1
                   name: book1
                   price: 100
-                - description: Books are human's best friend
-                  id: 1
-                  name: book1
-                  price: 100
-                - description: Books are human's best friend
-                  id: 1
-                  name: book1
-                  price: 100
               example:
-              - description: Books are human's best friend
-                id: 1
-                name: book1
-                price: 100
-              - description: Books are human's best friend
-                id: 1
-                name: book1
-                price: 100
               - description: Books are human's best friend
                 id: 1
                 name: book1
@@ -183,6 +202,48 @@ components:
       - name
       - description
       - price
+    Error:
+      type: object
+      properties:
+        fault:
+          type: boolean
+          description: Is the error a server-side fault?
+          example: false
+        id:
+          type: string
+          description: ID is a unique identifier for this particular occurrence of the problem.
+          example: 123abc
+        message:
+          type: string
+          description: Message is a human-readable explanation specific to this occurrence of the problem.
+          example: parameter 'p' must be an integer
+        name:
+          type: string
+          description: Name is the name of this class of errors.
+          example: bad_request
+        temporary:
+          type: boolean
+          description: Is the error temporary?
+          example: false
+        timeout:
+          type: boolean
+          description: Is the error a timeout?
+          example: false
+      description: Book Not Found Error
+      example:
+        fault: true
+        id: 123abc
+        message: parameter 'p' must be an integer
+        name: bad_request
+        temporary: false
+        timeout: true
+      required:
+      - name
+      - id
+      - message
+      - temporary
+      - timeout
+      - fault
     UpdateRequestBody:
       type: object
       properties:
